<resources>
    <string name="app_name">National Day Parade Theme Song Complilation</string>
    <string name="enter_song_title_here">Enter song title here.</string>
    <string name="song_title">Song Title</string>
    <string name="singer_s">Singer(s)</string>
    <string name="enter_singer_s_name_s_here">Enter singer(s)\' name(s) here.</string>
    <string name="year">Year</string>
    <string name="enter_year_of_release_here">Enter year of release here.</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="song_id">Song ID</string>
    <string-array name="years">
        <item>Default</item>
    </string-array>
</resources>